--- a/backend/package.json
+++ b/backend/package.json
@@ -9,6 +9,7 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "bcrypt": "^5.0.0",
     "body-parser": "^1.18.3",
     "chai": "^4.1.2",
     "chai-http": "^4.2.0",
@@ -19,6 +20,7 @@
     "express-session": "^1.15.6",
     "express-sessions": "^1.0.6",
     "mocha": "^5.2.0",
+    "mysql": "^2.18.1",
     "nodemon": "^2.0.4"
   }
 }
