--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,9 +9,12 @@
     "react-cookie": "^3.0.4",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.5.0",
+    "react-redux": "^7.2.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
-    "react-scripts": "1.1.5"
+    "react-scripts": "1.1.5",
+    "redux": "^4.0.5",
+    "redux-thunk": "^2.3.0"
   },
   "scripts": {
     "start": "react-scripts start",
