--- a/frontend/package.json
+++ b/frontend/package.json
@@ -9,6 +9,7 @@
     "react-cookie": "^3.0.4",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.5.0",
+    "react-fontawesome": "^1.7.1",
     "react-redux": "^7.2.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
