--- a/backend/package.json
+++ b/backend/package.json
@@ -11,8 +11,8 @@
   "dependencies": {
     "bcrypt": "^5.0.0",
     "body-parser": "^1.18.3",
-    "chai": "^4.1.2",
-    "chai-http": "^4.2.0",
+    "chai": "^4.2.0",
+    "chai-http": "^4.3.0",
     "client-sessions": "^0.8.0",
     "cookie-parser": "^1.4.3",
     "cors": "^2.8.4",
@@ -20,6 +20,7 @@
     "express-session": "^1.15.6",
     "express-sessions": "^1.0.6",
     "mocha": "^5.2.0",
+    "multer": "^1.4.2",
     "mysql": "^2.18.1",
     "nodemon": "^2.0.4"
   }
