--- a/frontend/package.json
+++ b/frontend/package.json
@@ -3,13 +3,17 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@iconify/icons-mdi": "^1.0.144",
+    "@iconify/react": "^1.1.3",
     "axios": "^0.18.0",
+    "google-map-react": "^2.1.7",
     "react": "^16.5.0",
     "react-bootstrap": "^1.3.0",
     "react-cookie": "^3.0.4",
     "react-cookies": "^0.1.0",
     "react-dom": "^16.5.0",
     "react-fontawesome": "^1.7.1",
+    "react-geocode": "^0.2.2",
     "react-redux": "^7.2.1",
     "react-router": "^4.3.1",
     "react-router-dom": "^4.3.1",
